# cfmpdlrs1

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release-linux.yml  release-macos.yml  release-windows.yml
src/: main.rs  utils.rs
src/json/: get_files.rs  get_mods.rs  manifest.rs  mod.rs
