[package]
name = "cfmpdlrs1"
version = "0.1.0"
edition = "2021"
description = "Simple rust program for downloading CurseForge modpacks."
authors = ["kneelawk <kneelawk@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
async_zip = { version = "0.0.12", features = ["full"] }
bytes = "^1.4"
chrono = { version = "^0.4", features = ["serde"] }
clap = { version = "^4.1", features = ["derive"] }
digest = "^0.10"
directories = "^4.0"
dotenv = "^0.15"
futures = "^0.3"
futures-util = "^0.3"
hex = "^0.4"
md-5 = "^0.10"
notify = { version = "^5.1", default-features = false, features = ["macos_kqueue"] }
reqwest = { version = "^0.11", features = ["json", "stream"] }
sanitize-filename = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
sha1 = "^0.10"
thiserror = "^1.0"
tokio = { version = "^1.26", features = ["full"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"
walkdir = "^2.3"
